fix: added hidden visibility setting to keep closed burger menu from being announced by screen reader
relates #33

--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -53,6 +53,7 @@
 .burger--modal__inactive {
   display: none;
   transform: translateX(200%);
+  visibility: hidden;
 }
 
 .burger--modal__active {
